WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25574
AXImageMap children links don't respond properly to accessibilityHitTest:
https://bugs.webkit.org/show_bug.cgi?id=25574
Summary
AXImageMap children links don't respond properly to accessibilityHitTest:
chris fleizach
Reported
2009-05-05 12:18:01 PDT
if you roll the arrow over a link inside of an image map, the AXWebArea is returned instead of the AXLink
Attachments
patch
(23.77 KB, patch)
2009-05-05 15:42 PDT
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-05-05 15:42:30 PDT
Created
attachment 30038
[details]
patch
Beth Dakin
Comment 2
2009-05-05 15:49:44 PDT
Comment on
attachment 30038
[details]
patch
> +AccessibilityObject* AccessibilityRenderObject::doAccessibilityImageMapHitTest(HTMLAreaElement* area, const IntPoint& point) const
This is a nitpick, but I don't care for the use of the word "do" in the function name here. How about just imageMapHitTest() or accessibilityImageMapHitTest()? r=me
chris fleizach
Comment 3
2009-05-05 15:50:20 PDT
do bothers me too, but was matching the other hit test method. will change
chris fleizach
Comment 4
2009-05-05 16:04:18 PDT
http://trac.webkit.org/changeset/43258
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug