Bug 25574: AXImageMap children links don't respond properly to accessibilityHitTest: https://bugs.webkit.org/show_bug.cgi?id=25574

Canonical link: https://commits.webkit.org/35281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43258 268f45cc-cd09-0410-ab3c-d52691b4dbfc