WebCore/page/AccessibilityObject.h
@@ -252,7 +252,7 @@ public:
     virtual int intValue() const;
     virtual float valueForRange() const { return 0.0f; }
     virtual float maxValueForRange() const { return 0.0f; }
-    virtual float minValueForRange() const {return 0.0f; }
+    virtual float minValueForRange() const { return 0.0f; }
     virtual int layoutCount() const;
     static bool isARIAControl(AccessibilityRole);
     static bool isARIAInput(AccessibilityRole);
